--- a/src/component/tool-bar/style.less
+++ b/src/component/tool-bar/style.less
@@ -25,7 +25,9 @@
       border-left: 1px solid #e8e8e8;
     }
     & > * {
+      box-sizing: border-box;
       display: inline-block;
+      height: 100%;
       font-size: 16px;
       margin: 0 5px;
       padding: 5px 11px;
