--- a/src/component/color-panel/style.less
+++ b/src/component/color-panel/style.less
@@ -28,16 +28,17 @@
     }
     span {
       display: inline-block;
+      margin: 2px;
       width: 21px;
       height: 21px;
       cursor: pointer;
       border-radius: 3px;
     }
-    i {
+    span + span{
       position: absolute;
       color: white;
       z-index: 99;
-      top: -1px;
+      top: 2px;
       left: 3px;
     }
   }
