fix: 优化滚动条的显示

--- a/src/global.less
+++ b/src/global.less
@@ -1,9 +1,11 @@
-html, body, div {
+html, body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 :global #root {
   overflow: auto;
+  height: 100%;
 }
 // @font-face {
 // 	font-family: 'iconfont';
