fix: 优化部分代码

--- a/src/global.less
+++ b/src/global.less
@@ -3,6 +3,10 @@ html, body {
   padding: 0;
   height: 100%;
 }
+:global figure {
+  padding: 0;
+  margin: 0;
+}
 :global #root {
   overflow: auto;
   height: 100%;
